--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -23,6 +23,7 @@ import ProjectItem from './ProjectItem.astro';
 									src={hero}
 									widths={[720, 960, 1920, hero.width]}
 									sizes={`(max-width: 360px) 720px, (max-width: 720px) 960px, (max-width: 1600px) 1920px, ${hero.width}px`}
+									format="avif"
 									alt="Jeffrey de Roode"
 									class="top-0 md:w-1/2 h-full w-full object-cover"
 									loading="lazy"
