--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -25,25 +25,31 @@ const {
 	description={description}
 	openGraph={{
 		basic: {
-			title:
-				'Jeffrey de Roode is a Rotterdam based freelance producer specialized in documentaries.',
+			title: title,
 			type: 'Website',
 			image: 'https://jeffreyderoode.nl/assets/images/jdr-share.jpg',
+			url: 'https://jeffreyderoode.nl/',
 		},
 	}}
 	extend={{
-		// extending the default link tags
-		// link: [{ rel: 'icon', href: '/favicon.ico' }],
-		// extending the default meta tags
-		// meta: [
-		// {
-		// name: 'twitter:image',
-		// content:
-		// 'https://user-images.githubusercontent.com/5182256/131216951-8f74f425-f775-463d-a11b-0e01ad9fce8d.png',
-		// },
-		// { name: 'twitter:title', content: 'Tinker Tailor Soldier Spy' },
-		// { name: 'twitter:description', content: 'Agent' },
-		//],
+		meta: [
+			{
+				name: 'twitter:card',
+				content: 'summary_large_image',
+			},
+			{
+				name: 'twitter:title',
+				content: title,
+			},
+			{
+				name: 'twitter:description',
+				content: description,
+			},
+			{
+				name: 'twitter:image',
+				content: 'https://jeffreyderoode.nl/assets/images/jdr-share.jpg',
+			},
+		],
 	}}
 />
 
