--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,6 +14,8 @@ import hero from '../assets/2025-12-11_HIG_0497.jpg';
 			sizes="(max-width: 360px) 240px, (max-width: 720px) 960px, (max-width: 1600px) 1920px, 100vw"
 			format="avif"
 			class="w-full h-full max-h-full object-cover"
+			loading="eager"
+			fetchpriority="high"
 		/>
 	</div>
 
