--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100..900&display=swap');
+/* Azeret Mono font is loaded via @font-face below, removing render-blocking @import */
 
 /* Global variables */
 :root {
@@ -92,9 +92,9 @@
 	src:
 		url('../assets/fonts/sharpie-webfont.woff2') format('woff2'),
 		url('../assets/fonts/sharpie-webfont.woff') format('woff');
-
 	font-weight: normal;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -104,6 +104,7 @@
 		url('../assets/fonts/Azeret-Mono.woff') format('woff');
 	font-weight: 100 900;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -111,9 +112,9 @@
 	src:
 		url('../assets/fonts/Azeret-Medium.woff2') format('woff2'),
 		url('../assets/fonts/Azeret-Medium.woff') format('woff');
-
 	font-weight: 500;
 	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
@@ -121,9 +122,9 @@
 	src:
 		url('../assets/fonts/Azeret-Bold.woff2') format('woff2'),
 		url('../assets/fonts/Azeret-Bold.woff') format('woff');
-
 	font-weight: 700;
 	font-style: normal;
+	font-display: swap;
 }
 
 body,
