--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -59,4 +59,12 @@ const {
 <link
 	href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
 	rel="stylesheet"
+	media="print"
+	onload="this.media='all'"
 />
+<noscript>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap"
+		rel="stylesheet"
+	/>
+</noscript>
