Update MainHead and index components; refine titles and descriptions for better clarity and SEO

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -9,8 +9,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeffrey de Roode • Freelance Producer',
-	description = 'Jeffrey de Roode is a Rotterdam based freelance producer specialized in documentaries.',
+	title = 'Freelance Producer • Jeffrey de Roode • JDR productions • Rotterdam',
+	description = "I'm a documentary film producer based in Rotterdam. I operate as a producer, executive producer, or line producer on a freelance basis.",
 } = Astro.props;
 ---
 
