--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,10 @@ import ProjectList from '../components/ProjectList.astro';
 import FilmList from '../components/FilmList.astro';
 ---
 
-<BaseLayout title="Jeffrey de Roode • JDR productions • Freelance Producer Rotterdam">
+<BaseLayout
+	title="Documentary Producer Rotterdam | Jeffrey de Roode"
+	description="I am a Rotterdam based producer of documentaries and I work on projects that contribute to making this world a better place."
+>
 	<div id="content">
 		<Hero />
 		<ProjectList />
