Update index.astro title for improved branding and clarity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import FilmList from '../components/FilmList.astro';
 ---
 
 <BaseLayout
-	title="Documentary Producer Rotterdam | Jeffrey de Roode"
+	title="Freelance Producer • Jeffrey de Roode • JDR productions • Rotterdam"
 	description="I am a Rotterdam based producer of documentaries and I work on projects that contribute to making this world a better place."
 >
 	<div id="content">
