--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import { Picture } from 'astro:assets';
 import hero from '../assets/2025-12-11_HIG_0497.jpg';
 ---
 
-<header class="sticky top-0 z-10 flex flex-col md:grid md:grid-cols-2 h-screen">
+<header class="sticky top-0 z-10 flex flex-col md:grid md:grid-cols-2 h-[100svh]">
 	<div class="flex-1 flex items-center justify-center overflow-hidden md:h-[100dvh]">
 		<Image
 			src={hero}
@@ -19,7 +19,7 @@ import hero from '../assets/2025-12-11_HIG_0497.jpg';
 		/>
 	</div>
 
-	<div class="flex items-center justify-center z-50 row-span-4 py-4 md:p-4 copy">
+	<div class="flex items-center justify-center z-50 row-span-5 py-4 md:p-4 copy">
 		<div class="text-center flex flex-col gap-2 p-4 pb-12 md:p-vw-2
 		 md:gap-4">
 			<p class="uppercase intro text-7xl md:text-6xl lg:text-5xl text-balance leading-tighter">
